syntax = "proto3";

package hrelay;

// Config represents a config for an instance of hrelayd.
message Config {
	// Required. The host name of the server.
	string host_name = 1;
	// Required. The directory to use to store TLS certificates.
	string cert_dir = 2;
	// Required. A file containing client CA certificate(s), in PEM format.
	string client_ca_certs = 3;
	// The email address of the server admin. (used for ACME only)
	string email = 4;
}